feat: Bump up controller-gen version & update CRD metadata

--- a/charts/kubemox/templates/crds/containers.yaml
+++ b/charts/kubemox/templates/crds/containers.yaml
@@ -10,10 +10,40 @@ spec:
     kind: Container
     listKind: ContainerList
     plural: containers
+    shortNames:
+    - lxc
     singular: container
   scope: Namespaced
   versions:
-  - name: v1alpha1
+  - additionalPrinterColumns:
+    - description: The name of the target node of Proxmox
+      jsonPath: .spec.nodeName
+      name: Node
+      type: string
+    - description: The ID of the container
+      jsonPath: .status.status.id
+      name: ID
+      type: string
+    - description: The number of CPU cores
+      jsonPath: .spec.template.cores
+      name: Cores
+      type: string
+    - description: The amount of memory in MB
+      jsonPath: .spec.template.memory
+      name: Memory
+      type: string
+    - description: The state of the VM
+      jsonPath: .status.status.state
+      name: State
+      type: string
+    - description: The uptime of the VM
+      jsonPath: .status.status.uptime
+      name: Uptime
+      type: string
+    - jsonPath: .metadata.creationTimestamp
+      name: Age
+      type: date
+    name: v1alpha1
     schema:
       openAPIV3Schema:
         description: Container is the Schema for the containers API
@@ -86,19 +116,105 @@ spec:
           status:
             description: ContainerStatus defines the observed state of Container
             properties:
-              id:
-                type: integer
-              name:
-                type: string
-              node:
-                type: string
-              state:
+              conditions:
                 description: 'INSERT ADDITIONAL STATUS FIELD - define observed state
                   of cluster Important: Run "make" to regenerate code after modifying
                   this file'
-                type: string
-              uptime:
-                type: string
+                items:
+                  description: "Condition contains details for one aspect of the current
+                    state of this API Resource. --- This struct is intended for direct
+                    use as an array at the field path .status.conditions.  For example,
+                    \n type FooStatus struct{ // Represents the observations of a
+                    foo's current state. // Known .status.conditions.type are: \"Available\",
+                    \"Progressing\", and \"Degraded\" // +patchMergeKey=type // +patchStrategy=merge
+                    // +listType=map // +listMapKey=type Conditions ]metav1.Condition
+                    `json:\"conditions,omitempty\" patchStrategy:\"merge\" patchMergeKey:\"type\"
+                    protobuf:\"bytes,1,rep,name=conditions\"` \n // other fields }"
+                  properties:
+                    lastTransitionTime:
+                      description: lastTransitionTime is the last time the condition
+                        transitioned from one status to another. This should be when
+                        the underlying condition changed.  If that is not known, then
+                        using the time when the API field changed is acceptable.
+                      format: date-time
+                      type: string
+                    message:
+                      description: message is a human readable message indicating
+                        details about the transition. This may be an empty string.
+                      maxLength: 32768
+                      type: string
+                    observedGeneration:
+                      description: observedGeneration represents the .metadata.generation
+                        that the condition was set based upon. For instance, if .metadata.generation
+                        is currently 12, but the .status.conditions[x].observedGeneration
+                        is 9, the condition is out of date with respect to the current
+                        state of the instance.
+                      format: int64
+                      minimum: 0
+                      type: integer
+                    reason:
+                      description: reason contains a programmatic identifier indicating
+                        the reason for the condition's last transition. Producers
+                        of specific condition types may define expected values and
+                        meanings for this field, and whether the values are considered
+                        a guaranteed API. The value should be a CamelCase string.
+                        This field may not be empty.
+                      maxLength: 1024
+                      minLength: 1
+                      pattern: ^[A-Za-z]([A-Za-z0-9_,:]*[A-Za-z0-9_])?$
+                      type: string
+                    status:
+                      description: status of the condition, one of True, False, Unknown.
+                      enum:
+                      - "True"
+                      - "False"
+                      - Unknown
+                      type: string
+                    type:
+                      description: type of condition in CamelCase or in foo.example.com/CamelCase.
+                        --- Many .condition.type values are consistent across resources
+                        like Available, but because arbitrary conditions can be useful
+                        (see .node.status.conditions), the ability to deconflict is
+                        important. The regex it matches is (dns1123SubdomainFmt/)?(qualifiedNameFmt)
+                      maxLength: 316
+                      pattern: ^([a-z0-9]([-a-z0-9]*[a-z0-9])?(\.[a-z0-9]([-a-z0-9]*[a-z0-9])?)*/)?(([A-Za-z0-9][-A-Za-z0-9_.]*)?[A-Za-z0-9])$
+                      type: string
+                  required:
+                  - lastTransitionTime
+                  - message
+                  - reason
+                  - status
+                  - type
+                  type: object
+                type: array
+              status:
+                properties:
+                  IPAddress:
+                    description: IPAddress is the IP address of the VM
+                    type: string
+                  OSInfo:
+                    description: OSInfo is the OS information of the VM
+                    type: string
+                  id:
+                    description: ID is the ID of the VM
+                    type: integer
+                  node:
+                    description: Node is the name of the node
+                    type: string
+                  state:
+                    description: State is the state of the VM
+                    type: string
+                  uptime:
+                    description: Uptime is the uptime of the VM
+                    type: string
+                required:
+                - IPAddress
+                - OSInfo
+                - id
+                - node
+                - state
+                - uptime
+                type: object
             type: object
         type: object
     served: true
