--- a/charts/kubemox/templates/crds/virtualmachinesets.yaml
+++ b/charts/kubemox/templates/crds/virtualmachinesets.yaml
@@ -2,7 +2,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.12.0
+    controller-gen.kubebuilder.io/version: v0.13.0
   name: virtualmachinesets.proxmox.alperen.cloud
 spec:
   group: proxmox.alperen.cloud
@@ -10,10 +10,36 @@ spec:
     kind: VirtualMachineSet
     listKind: VirtualMachineSetList
     plural: virtualmachinesets
+    shortNames:
+    - vmset
     singular: virtualmachineset
   scope: Namespaced
   versions:
-  - name: v1alpha1
+  - additionalPrinterColumns:
+    - description: The number of VMs
+      jsonPath: .spec.replicas
+      name: Replicas
+      type: integer
+    - description: The name of the target node of Proxmox
+      jsonPath: .spec.nodeName
+      name: Node
+      type: string
+    - description: The number of CPU cores
+      jsonPath: .spec.template.cores
+      name: Cores
+      type: string
+    - description: The amount of memory in MB
+      jsonPath: .spec.template.memory
+      name: Memory
+      type: string
+    - description: The status of the VM
+      jsonPath: .status.conditions[0].type
+      name: Status
+      type: string
+    - jsonPath: .metadata.creationTimestamp
+      name: Age
+      type: date
+    name: v1alpha1
     schema:
       openAPIV3Schema:
         description: VirtualMachineSet is the Schema for the virtualmachinesets API
@@ -33,13 +59,28 @@ spec:
           spec:
             description: VirtualMachineSetSpec defines the desired state of VirtualMachineSet
             properties:
+              deletionProtection:
+                default: false
+                description: DeletionProtection is a flag that indicates whether the
+                  VM should be protected from deletion. If true, the VM will not be
+                  deleted when the Kubernetes resource is deleted. If not set, it
+                  defaults to false.
+                type: boolean
+              enableAutoStart:
+                default: true
+                description: EnableAutoStart is a flag that indicates whether the
+                  VM should automatically start when it's powered off. If true, the
+                  VM will start automatically when it's powered off. If not set, it
+                  defaults to true.
+                type: boolean
               nodeName:
+                description: NodeName is the name of the target node of Proxmox
                 type: string
               replicas:
-                description: Foo is an example field of VirtualMachineSet. Edit virtualmachineset_types.go
-                  to remove/update
+                description: Replicas is the number of VMs
                 type: integer
               template:
+                description: Template is the name of the source VM template
                 properties:
                   cores:
                     description: Cores is the number of CPU cores
