--- a/config/crd/bases/proxmox.alperen.cloud_virtualmachinesets.yaml
+++ b/config/crd/bases/proxmox.alperen.cloud_virtualmachinesets.yaml
@@ -3,7 +3,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.12.0
+    controller-gen.kubebuilder.io/version: v0.13.0
   name: virtualmachinesets.proxmox.alperen.cloud
 spec:
   group: proxmox.alperen.cloud
@@ -11,10 +11,36 @@ spec:
     kind: VirtualMachineSet
     listKind: VirtualMachineSetList
     plural: virtualmachinesets
+    shortNames:
+    - vmset
     singular: virtualmachineset
   scope: Namespaced
   versions:
-  - name: v1alpha1
+  - additionalPrinterColumns:
+    - description: The number of VMs
+      jsonPath: .spec.replicas
+      name: Replicas
+      type: integer
+    - description: The name of the target node of Proxmox
+      jsonPath: .spec.nodeName
+      name: Node
+      type: string
+    - description: The number of CPU cores
+      jsonPath: .spec.template.cores
+      name: Cores
+      type: string
+    - description: The amount of memory in MB
+      jsonPath: .spec.template.memory
+      name: Memory
+      type: string
+    - description: The status of the VM
+      jsonPath: .status.conditions[0].type
+      name: Status
+      type: string
+    - jsonPath: .metadata.creationTimestamp
+      name: Age
+      type: date
+    name: v1alpha1
     schema:
       openAPIV3Schema:
         description: VirtualMachineSet is the Schema for the virtualmachinesets API
