--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -10,6 +10,7 @@ resources:
 - bases/proxmox.alperen.cloud_containers.yaml
 - bases/proxmox.alperen.cloud_customcertificates.yaml
 - bases/proxmox.alperen.cloud_storagedownloadurls.yaml
+- bases/proxmox.alperen.cloud_virtualmachinetemplates.yaml
 #+kubebuilder:scaffold:crdkustomizeresource
 
 patches:
@@ -35,6 +36,7 @@ patches:
 #- path: patches/cainjection_in_containers.yaml
 #- path: patches/cainjection_in_proxmox_customcertificates.yaml
 #- path: patches/cainjection_in_proxmox_storagedownloadurls.yaml
+#- path: patches/cainjection_in_proxmox_virtualmachinetemplates.yaml
 #+kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # the following config is for teaching kustomize how to do kustomization for CRDs.
