--- a/config/samples/kustomization.yaml
+++ b/config/samples/kustomization.yaml
@@ -8,4 +8,5 @@ resources:
 - proxmox_v1alpha1_container.yaml
 - proxmox_v1alpha1_customcertificate.yaml
 - proxmox_v1alpha1_storagedownloadurl.yaml
+- proxmox_v1alpha1_virtualmachinetemplate.yaml
 #+kubebuilder:scaffold:manifestskustomizesamples
