--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,6 +9,7 @@ nav:
   - Virtual Machines (QEMU): 
     - VirtualMachine: crds/virtualmachine.md
     - ManagedVirtualMachine: crds/managedvirtualmachine.md
+    - VirtualMachineTemplate: crds/virtualmachinetemplate.md
     - VirtualMachineSet: crds/virtualmachineset.md
     - VirtualMachineSnapshot: crds/virtualmachinesnapshot.md
     - VirtualMachineSnapshotPolicy: crds/virtualmachinesnapshotpolicy.md
