Test out generics for vm config

--- a/.github/workflows/golangci-lint.yaml
+++ b/.github/workflows/golangci-lint.yaml
@@ -3,6 +3,9 @@ name: GolangCI-Lint
 on:
   pull_request:
     types: [opened, edited, synchronize, reopened]
+  push:
+    branches:
+      - '**'
 
 jobs:
   lint:
