--- a/.github/workflows/verify.yaml
+++ b/.github/workflows/verify.yaml
@@ -5,6 +5,9 @@ on:
     types: [opened, edited, synchronize, reopened]
     branches:
       - main
+  push:
+    branches:
+      - main
 
 jobs:
   verify:
