fix: Cloud init config settings

--- a/config/crd/bases/proxmox.alperen.cloud_virtualmachines.yaml
+++ b/config/crd/bases/proxmox.alperen.cloud_virtualmachines.yaml
@@ -240,6 +240,10 @@ spec:
             - name
             - nodeName
             type: object
+            x-kubernetes-validations:
+            - message: Exactly one of 'template' or 'newVMSpec' must be specified
+              rule: '( (has(self.template) ? 1 : 0) + (has(self.newVMSpec) ? 1 : 0)
+                ) == 1'
           status:
             description: VirtualMachineStatus defines the observed state of VirtualMachine
             properties:
