--- a/config/crd/bases/proxmox.alperen.cloud_virtualmachinetemplates.yaml
+++ b/config/crd/bases/proxmox.alperen.cloud_virtualmachinetemplates.yaml
@@ -73,7 +73,7 @@ spec:
                 description: Cloud Init Config
                 properties:
                   custom:
-                    description: 'TODO: Implement the following'
+                    description: Custom fields for cloud-init
                     properties:
                       metaData:
                         type: string
